remove login and register for User

--- a/MST/Views/Account/Login.cshtml
+++ b/MST/Views/Account/Login.cshtml
@@ -38,12 +38,12 @@
 
                 <button type="submit" class="btn btn-login w-100">SIGN IN</button>
 
-                <p class="text-center mt-3">
-                    Don't have an account? <a asp-controller="Account" asp-action="Register">Register</a>
-                </p>
-                <div class="text-center mt-2">
-                    <a asp-controller="Home" asp-action="Index">Back</a>
-                </div>
+                @* <p class="text-center mt-3"> *@
+                @*     Don't have an account? <a asp-controller="Account" asp-action="Register">Register</a> *@
+                @* </p> *@
+                @* <div class="text-center mt-2"> *@
+                @*     <a asp-controller="Home" asp-action="Index">Back</a> *@
+                @* </div> *@
             </form>
         </div>
 
